# adding-observability-feature-for-the-agents

./: PROBLEM.md  README.md
backend/: README.md  main.py  observability.py  pyproject.toml
backend/callbacks/: __init__.py  langfuse_callback.py
backend/security/: __init__.py  security.py
frontend/: README.md  package.json
frontend/react-frontend/: package-lock.json
frontend/react-frontend/src/: ChatComponent.tsx  apiService.ts  main.tsx
frontend/src/: App.tsx  styles.css
