[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]==0.38.0", 
    "python-dotenv==1.2.1", 
    "langchain==1.0.0" , 
    "langchain-openai==1.0.0", 
    "typing-extensions==4.15.0", 
    "requests==2.32.5", 
    "python-jose[cryptography]==3.5.0",
    "langfuse==3.9.1",               
    "opentelemetry-sdk==1.38.0",       
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "fastapi==0.121.0"
]
